# FastAPIHotels

./: main.py  pyproject.toml
hotelsapi/: database.py  hotels_data.py  main.py  models.py  oauth2.py  schemas.py
hotelsapi/routers/: auth.py  hotel.py  user.py
hotelsapi/schemas/: hotels.py  users.py
tests/: test_hotelsapi.py
